# obstacle-avoiding-rover

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: lib.rs  main.rs
