[package]
name = "obstacle-avoiding-rover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", features = ["device"]}
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"]}
rtt-target = "0.4.0"
rtic-monotonics = { version = "1.0.1", features = ["cortex-m-systick"]}
rtic = { version = "2.0.1", features = ["thumbv7-backend"] }
stm32f103_pac = { path = "stm32f103_pac", features = ["rt", "critical-section"] }
heapless = "0.7.16"
micromath = "1.1.1"
